# neo_bridge

./: CMakeLists.txt  README.md
configuration_files/: config.lua  config_neo.lua  config_turtlebot2.lua
include/neo_bridge/: CBackServer.h  CBusTask.h  CClientEpoll.h  CCommandExecutor.h  CConfig.h  CDebug.h  CEpollBase.h  CMappingNode.h  CPreServer.h  CRosNode.h  CRosNodeManager.h  CServerEpoll.h  CShareMem.h  CTcpClient.h  CTcpServer.h  CUnDataPackTask.h  CUnpackTask.h  Debug.h  RosExploreCtl.h  RosLidarCtl.h  RosLocalizationCtl.h  RosLocationCtl.h  RosMappingCtl.h  RosNavigationCtl.h  RosRobotCtl.h  RosSlamCtl.h  TaskCancelGoal.h  TaskCmdVel.h  TaskGlobalPath.h  TaskGoal.h  TaskLidar.h  TaskLoadMap.h  TaskMap.h  TaskNodeCtl.h  TaskRobotStatus.h  TaskRosControl.h  ThreadClientEpoll.h  ThreadReceiveAck.h  ThreadTimerTask.h  config.h  (+6 more)
include/neoslam_sdk/: TypePacket_CancelGoal.h  TypePacket_CmdVel.h  TypePacket_GlobalPath.h  TypePacket_LidarDatas.h  TypePacket_MapDatas.h  TypePacket_MapUpload.h  TypePacket_RobotStatus.h  TypePacket_RosControl.h  TypePacket_SendGoal.h  Type_CmdVel.h  Type_GlobalPath.hpp  Type_Lidar.h  Type_LoadMap.h  Type_Pose.h  Type_UserData.h  mode.h  neo_map.hpp
launch/: NeoSim.launch  StartNeo.launch
scripts/: config  install  install.sh  mapping.sh  mapping_kill.sh  navigation.sh  navigation_kill.sh
src/: client_example.cpp  main.cpp
src/TCPIP/: CBusTask.cpp  CClientEpoll.cpp  CEpollBase.cpp  CHostAddr.cpp  CServerEpoll.cpp  CSocket.cpp  CTcpClient.cpp  CTcpServer.cpp  CTcpSocket.cpp  CUnDataPackTask.cpp
src/common/: CDebug.cpp  CShareMem.cpp  CStreamBase.cpp  CThreadPool.cpp  packet.cpp
src/server/: CBackServer.cpp  CCommandExecutor.cpp  CConfig.cpp  CMappingNode.cpp  CPreServer.cpp  CRosNode.cpp  CRosNodeManager.cpp  CUnpackTask.cpp  RosExploreCtl.cpp  RosLidarCtl.cpp  RosLocalizationCtl.cpp  RosLocationCtl.cpp  RosMappingCtl.cpp  RosNavigationCtl.cpp  RosRobotCtl.cpp  RosSlamCtl.cpp  TaskCancelGoal.cpp  TaskCmdVel.cpp  TaskGlobalPath.cpp  TaskGoal.cpp  TaskLidar.cpp  TaskLoadMap.cpp  TaskMap.cpp  TaskNodeCtl.cpp  TaskRobotStatus.cpp  TaskRosControl.cpp  ThreadClientEpoll.cpp  ThreadReceiveAck.cpp  ThreadTimerTask.cpp  (+2 more)
